# SOEM

./: CMakeLists.txt
soem/: ethercatcoe.c
test/linux/simple_test/: CMakeLists.txt  my_simple_test.c
test/linux/slaveinfo/: slaveinfo.c
